# vision

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: labelstudio_interface.xml
datasets/: registry.yaml
docs/: phase2_annotation_guide.md  vision_engine_specification.md
experiments/exp-001/: yolov11_baseline.md
experiments/exp-002/: ocr_baseline.md
experiments/exp-003/: rtdetr_comparison.md
notebooks/: vision_engine_auto_label.ipynb  vision_engine_rtdetr_train.ipynb  vision_engine_yolov11_train.ipynb
scripts/: annotation_stats.py  auto_label.py  export_to_labelstudio.py  fix_notebooks.py  format_yolo_dataset.py  generate_rtdetr_notebook.py  generate_splits.py  test_pipeline.py
src/: __init__.py
src/detector/: __init__.py  base.py  rtdetr.py  yolo.py
src/evaluation/: __init__.py
src/inference/: __init__.py
src/ocr/: __init__.py  base.py  easyocr_backend.py
src/reading_order/: __init__.py  base.py
src/schema/: __init__.py  models.py
src/segmentation/: __init__.py  base.py
tests/: conftest.py  test_schema.py
